resources/css/bz.css
@charset "utf-8";
/* CSS Document */

/*---------------------

Global Changes

----------------------*/
a {
	color: #01a433;
	text-decoration: none;
	}
.green {
	color: #0ba349;
	
	}
.purple {
	color: #6b2868;
	
}
.overlay {
	background-color: #fbfbfb;
	}
h1,h2,h3,h4,h5,h6 {
	font-family: 'Montserrat', sans-serif;
	}
p {
    font-family: 'Raleway', sans-serif;
    color: rgb(17,17,17);
    letter-spacing: .4px;
    font-size: 1.1em;
    line-height: 22px;
	font-weight:500;
	}
.banner {
	background-color: rgba(17,17,17,0.05);
	border-radius: 3px;
	}
.box-shadow {
    -webkit-box-shadow: 4px 4px 7px 0 rgba(0,0,0,.24);
    -moz-box-shadow: 4px 4px 7px 0 rgba(0,0,0,.24);
    box-shadow: 4px 4px 7px 0 rgba(0,0,0,.24);
}
.banner-content {
    padding: 20px 35px 30px 35px;
    margin-bottom: 35px;
}
.banner_wrap {
    background-size: cover;
    background-position: 50% 50%;
}

.button {
    background-color: transparent;
    border: 1px solid purple;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 12px;
    margin: 14px 0px;
    cursor: pointer;
    margin-bottom: 15px;
    width: 60%;
    border-radius: 0px;
	padding: 14px 0px;
    font-family: 'Montserrat', sans-serif;
    color: purple;
}
.button:hover {
    background-color:#01a433;
	border:1px solid #01a433;
    color: white;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 12px;
    margin: 14px 0px;
    cursor: pointer;
    margin-bottom: 15px;
    width: 60%;
    border-radius: 0px;
	font-family: 'Montserrat', sans-serif;
	transition-duration: .8s ease-in-out;
}
em {
	font-size: .8em;
	}
	
.typed-cursor{
    opacity: 1;
    -webkit-animation: blink 0.7s infinite;
    -moz-animation: blink 0.7s infinite;
    animation: blink 0.7s infinite;
}
@keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-webkit-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-moz-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@media (min-width: 1200px){
.container {
    width: 1050px;
}
}
/**********top nav******************/
.top-nav p {
	font-size: .7em;
	padding-top: 2px;
	}
.top-nav {
	background-color: #fff;
	border-bottom: 1px solid #fff;
}



/********** float panel **********/
.float-panel {
    top: 0px;
    width: 100%;
    z-index: 1200;
	transition:all 0.3s;
}
.fixed {
    box-shadow:0 2px 6px;  
    padding:0px 0;
    animation:slide-down 0.7s;
    opacity:;  
	height:60px;  
}                  


@keyframes slide-down {
    0% {
        opacity: 0;
        transform: translateY(-100%);
    } 
    100% {
        opacity: 0.9;
        transform: translateY(0);
    } 
}
/*-----------------------
navbar
------------------------*/
.navbar-inverse {
    background-color: #fff;
	border-color: #fff;
}
.navbar {
    position: relative;
    min-height: 90px;
	margin-bottom: 0px;
	-webkit-box-shadow: 4px 4px 7px 0 rgba(0,0,0,.24);
    -moz-box-shadow: 4px 4px 7px 0 rgba(0,0,0,.24);
    box-shadow: 4px 4px 7px 0 rgba(0,0,0,.24);
}
.navbar a {
	font-family: 'Raleway', sans-serif; 
	text-transform: uppercase;
	font-weight:700;
	}
.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
    padding-top: 1.2%;
}
.navbar-inverse .navbar-toggle .icon-bar {
    background-color: black;
}
.navbar-toggle {
    position: relative;
    float: right;
    padding: 9px 10px;
    margin-top: 29px;
    margin-right: 15px;
    margin-bottom: 8px;
    background-color: transparent;
    background-image: none;
}
.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
	    padding-top: 21px;
}
.navbar-nav>li>a {
    padding-top: 10px;
    padding-bottom: 10px;
    line-height: 37px;
}
.nav>li>a {
    position: relative;
    display: block;
    padding: 6px 18px;
}
.navbar-inverse .navbar-nav>li>a {
    color: #7b3976;
	letter-spacing: .8px;
}
.navbar-inverse .navbar-nav>li>a:hover {
    color: green;
}
.icon-bar{
	color: #7b3976;
	background-color: #7b3976;
	}
.navbar-inverse .navbar-toggle {
	border-color: #fff;
}
.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
    border-color: #fff;
	
}
.navbar-toggle .icon-bar {
    display: block;
    width: 30px;
    height: 2px;
    border-radius: 1px;
}
.navbar-brand {
    float: left;
    height: 50px;
    padding: 10px 15px;
    font-size: 18px;
    line-height: 20px;
}
.navbar-inverse .navbar-toggle .icon-bar {
    background-color: purple;
}
.navbar-inverse .navbar-toggle .icon-bar:hover {
    background-color: none;
	
}
.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
    background-color: #fff;
}
.sr-only:hover{
	color: #fff;
	}
@media only screen and (max-width: 767px) {
.navbar-header {
	-webkit-box-shadow: 4px 4px 7px 0 rgba(0,0,0,.24);
    -moz-box-shadow: 4px 4px 7px 0 rgba(0,0,0,.24);
    box-shadow: 4px 4px 7px 0 rgba(0,0,0,.24);
	height: 90px;
	}
	}
/*--------------------
video hero
---------------------*/
.homepage-hero-module {
    border-right: none;
    border-left: none;
    position: relative;
}
.no-video .video-container video,
.touch .video-container video {
    display: none;
}
.no-video .video-container .poster,
.touch .video-container .poster {
    display: block !important;
}
.video-container {
    position: relative;
    bottom: 0%;
    left: 0%;
    height: 100%;
    width: 100%;
    overflow: hidden;
    background: #000;
}
.video-container .poster img {
    width: 100%;
    bottom: 0;
    position: absolute;
}
.video-container .filter {
    z-index: 100;
    position: absolute;
    background: rgba(0, 0, 0, 0.4);
    width: 100%;
}
.video-container video {
    position: absolute;
    z-index: 0;
    bottom: 0;
	    top: 0;
}
.video-container video.fillWidth {
    width: 100%;
}
	
.header-container {
    width: 100%;
    height: 600px;
    border-left: none;
    border-right: none;
    position: relative;
    padding: 0px;
	}
/* ... */

